Revision history for Music-Cadence

{{$NEXT}}
    - Allow inversion of the second chord of the half cadence, because ...why not?

0.1101 2019-08-30 19:49:33
    - Improve eg/cadence slightly.

0.1100 2019-08-30 18:09:33
    - Enable 7th chord cadences.

0.1002 2019-08-30 17:20:14
    - Reword ABSTRACT.
    - Add more test cases.
    - Simplify inversion code.

0.1001 2019-08-30 15:08:03
    - Clean up code.

0.1000 2019-08-30 12:59:26
    - Allow optional inversion of the initial half cadence chord.

0.0901 2019-08-30 11:41:32
    - Fix docs.

0.0900 2019-08-30 11:26:14
    - Enable imperfect inverted cadences.
    - Improve documentation again!
    - Enhance test cases.

0.0801 2019-08-29 15:37:55
    - Improve documentation ever so slightly.
    - Clean up test code.

0.0800 2019-08-29 15:00:10
    - Add support for 2 of 3 imperfect cadence variations.

0.0700 2019-08-29 13:43:56
    - Fix the perfect authentic cadence top note.
    - Fix documentation error.
    - Make the final eg/cadence perfect instead of plagal.

0.0601 2019-08-29 10:49:02
    - Improve documentation.
    - Remove octave setting for midinum.
    - Update the test cases.

0.0600 2019-08-28 20:41:25
    - Add the "midinum" output format.
    - Improve documentation.

0.0504 2019-08-25 22:58:32
    - Update the module SYNOPSIS.
    - Comment eg/cadence a bit.

0.0503 2019-08-25 18:55:26
    - Exclude MIDI files from the distribution.

0.0502 2019-08-25 18:44:29
    - Update the module test.
    - Update the module SYNOPSIS.

0.0501 2019-08-24 21:50:19
    - Improve documentation.

0.0500 2019-08-24 21:38:39
    - Add a format attribute for midi accidental conversion.
    - Improve eg/cadence.

0.0406 2019-08-24 13:47:09
    - Die if the half cadence leading chord is outside the 1-7 range.
    - Improve documentation.

0.0405 2019-08-24 11:50:06
    - Remove the accidentally shipped *.mid file. :\

0.0404 2019-08-24 11:45:02
    - Improve documentation.