@@ -177,7 +177,7 @@ $chords = $mc->cadence(
     type      => 'imperfect',
     inversion => { 1 => 1, 2 => 1 },
 );
-is_deeply $chords, [ [qw/ B4 D4 G4 /], [qw/ E4 G4 C4 /] ], 'C 4 imperfect inversion 1-1,2-1';
+is_deeply $chords, [ [qw/ B4 D4 G5 /], [qw/ E4 G4 C5 /] ], 'C 4 imperfect inversion 1-1,2-1';
 
 $chords = $mc->cadence(
     key       => 'C#',
@@ -185,6 +185,6 @@ $chords = $mc->cadence(
     type      => 'imperfect',
     inversion => { 1 => 1, 2 => 1 },
 );
-is_deeply $chords, [ [qw/ C4 D#4 G#4 /], [qw/ F4 G#4 C#4 /] ], 'C# 4 imperfect inversion 1-1,2-1';
+is_deeply $chords, [ [qw/ C4 D#4 G#5 /], [qw/ F4 G#4 C#5 /] ], 'C# 4 imperfect inversion 1-1,2-1';
 
 done_testing();
